--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,16 @@
 /* =========================================================*/
 /*                    COLORS AND FONTS                      */
 /* =========================================================*/
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Playfair+Display+SC&family=Square+Peg&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Allison&family=Nanum+Myeongjo&family=Yesteryear&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&display=swap');
 :root {
     --clr-primary-200: #e9e5d9;
     --clr-primary-300: #5c5c5c;
-    --clr-primary-400: #a6bbc8;
+    --clr-primary-400: #99bac5;
     --clr-neutral-100: rgb(255, 255, 255);
     --clr-neutral-900: #4e5657;
 
-    --ff-primary: 'Yesteryear','cursive';
+   --ff-primary: 'Noto Sans Mono', monospace;   /*'Yesteryear','cursive'; */
     --ff-body: 'Nanum Myeongjo', serif;
 }
 /* =========================================================*/
@@ -49,6 +48,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 10vh;
     /* FOOTER HEIGHT */
     padding-bottom: 15vh; 
 }
@@ -78,23 +78,23 @@ html.is-animating .transition-fade {
 /*                          NAV                             */
 /* =========================================================*/
 .menuBar {
+    position: fixed;
     display: flex;
+    height: 10vh;
     /* flex-direction: column; */
     align-items: center;
     justify-content: space-between;
     padding: 0 30px 0 30px;
     /*Background color of menu bar*/
     background-color: var(--clr-primary-400);
-    flex-wrap: wrap;
+    width: 100%;
+    /* Make menuBar on top of everything */
+    z-index: 1;
 }
 .nav {
     display: flex;
-    width: 35%;
 }
 
-.contact {
-    justify-content: right;
-}
 
 .nav ul {
     list-style-type: none;
@@ -117,7 +117,7 @@ a.navitem {
     padding: 16px 0;
     margin: 0 12px;
     letter-spacing: 1px;
-    font-size: 12px;
+    font-size: .9rem;
     line-height: 16px;
     font-weight: 900;
     text-transform: uppercase;
@@ -139,6 +139,7 @@ a.navitem::before {
 }
 a.navitem:active::before {
     background-color: var(--clr-primary-300);
+
 }
 a.navitem:hover::before, a.navitem:focus::before {
     transform-origin: left top;
@@ -156,18 +157,61 @@ button:hover {
     color: var(--clr-primary-200);
 } 
 
+.menu-btn {
+    position: relative; 
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 1.5rem;
+    height: 1.5rem;
+    cursor: pointer; 
+    z-index: 1;
+}
+
+.menu-btn__lines, 
+.menu-btn__lines::before, 
+.menu-btn__lines::after {
+    width: 1.5rem; 
+    height: 0.1rem; 
+    background-color: #111111;
+    transition: all 0.5s ease-in-out;
+}
+.menu-btn__lines::before, 
+.menu-btn__lines::after {
+    content: '';
+    position: absolute; 
+}
+
+.menu-btn__lines::before {
+    transform: translateY(-0.5rem);
+}
+.menu-btn__lines::after {
+    transform: translateY(0.5rem);
+}
+/* Middle line will move 2 rem to the right and become transparent (will disappear*/
+.menu-btn.open .menu-btn__lines{
+    transform: translateX(2rem);
+    background-color: transparent;
+}
+
+.menu-btn.open .menu-btn__lines::before {
+    transform: rotate(45deg) translate(-1.5rem, 1.5rem);
+}
+.menu-btn.open .menu-btn__lines::after {
+    transform: rotate(-45deg) translate(-1.5rem, -1.5rem);
+}
 /* =========================================================*/
 /*                          HOME PAGE                       */
 /* =========================================================*/
 header {
     margin-top: 45px;
     text-align: center;
-    text-shadow: -5px -5px 2px var(--clr-primary-200)
+    /* text-shadow: -5px -5px 2px var(--clr-primary-200) */
 }
 header h1 {
     font-family: var(--ff-primary);
     font-style: bold;
-    font-size: 6rem;
+    font-size: 3.5rem;
     color: var(--clr-primary-300);
 }
 h2{
@@ -212,13 +256,18 @@ h2{
     display: flex;
     flex-direction: row;
     justify-content: left;
+    align-items: center;
+    margin-top: 30px;
 }
 .profileImage { 
-    width: 80%;
+    width:100%;
+    height: 50%;
+    object-fit: cover;
     max-width: 350px;
     min-width: 250px;
     border-radius: 50%;
-    border: solid var(--clr-primary-400) 2px;
+    /* border: solid var(--clr-primary-400) 2px; */
+    margin-top: 25px;
     margin-bottom: 25px;
 }
 .aboutMe {
@@ -236,6 +285,9 @@ h2{
     text-align: left;
 }
 
+.mono {
+    font-family: var(--ff-primary);
+}
 /* =========================================================*/
 /*                          CONTACT PAGE                    */
 /* =========================================================*/
@@ -364,18 +416,31 @@ button {
 /* =========================================================*/
 
 @media screen and (max-width:825px) {
-    .menuBar {
-        display: flex; 
-        align-items: center;
-        justify-content: space-between;
-    }
-    .home, .projects {
-        display: none;
-    }
 
-    /* .contact {
-        justify-content: right;
-    } */
+    /* MENU BTN */
+    .menu-btn {
+        display: flex;
+    }
+    .nav {
+        flex-direction: column;
+        justify-content: space-around;
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        height: 100vh;
+        background-color: white;
+        transform: translateX(100vw);
+        transition: transform 0.3s ease-in-out;
+        align-items: center;
+    }
+    a.navitem {
+        font-size: 2rem;
+    }
+    .nav.open {
+        transform: translateX(0);
+        
+    }
     header {
         display: flex;
         flex-direction: column;
@@ -387,7 +452,7 @@ button {
         width: 80%;
     }
     header h1 {
-        font-size: 3.75rem;
+        font-size: 3rem;
     }
     section {
         width: 80%;
@@ -399,20 +464,7 @@ button {
         width: 100vw;
         object-fit: contain;
     }
-  
-    .nav.show {
-        display: flex;
-    }
-    
-    .hamburger {
-        display: block;
-    }
-    
-    .hamburger:hover {
-        box-shadow: none;
-        color: white;
-    }
-    
+
 
     /* ABOUT ME PAGE */
     .aboutMePage {
@@ -420,6 +472,7 @@ button {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
     }
     .profileImage { 
         width: 60%;
@@ -430,7 +483,19 @@ button {
         margin-bottom: 25px;
     }
     .aboutMe {
-        text-align: center;
-        
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width:1000px) {
+    .aboutMePage {
+        margin-top: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .aboutMe {
+        margin-left: 0;
     }
 }
