--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
     --clr-primary-300: #5c5c5c;
     --clr-primary-400: #b2cdd5;
     --clr-neutral-100: rgb(255, 255, 255);
-    --clr-neutral-900: #4e5657;
+    --clr-neutral-900: #494949;
 
    --ff-primary: 'Noto Sans Mono', monospace;   /*'Yesteryear','cursive'; */
     --ff-body: 'Nanum Myeongjo', serif;
@@ -37,7 +37,7 @@
     display: flex;  
     flex-direction: column;
     position: relative;
-    background-color: var(--clr-neutral-100);
+    
     min-height: 100vh;
 }
 /* Holds all content EXCLUDING the footer */
@@ -47,7 +47,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 10vh;
+    /* NAV HEIGHT */
+    /* padding-top: 10vh; */
     /* FOOTER HEIGHT */
     padding-bottom: 15vh; 
 }
@@ -79,7 +80,8 @@ html.is-animating .transition-fade {
 /*                          NAV                             */
 /* =========================================================*/
 .menuBar {
-    position: fixed;
+    position: sticky;
+    top: 0;
     display: flex;
     height: 10vh;
     /* flex-direction: column; */
@@ -87,7 +89,8 @@ html.is-animating .transition-fade {
     justify-content: space-between;
     padding: 0 30px 0 30px;
     /*Background color of menu bar*/
-    background-color: var(--clr-primary-400) ;
+    /* background-color: var(--clr-primary-400) ; */
+    background-color: rgba(255, 255, 255, 0.7);
     width: 100%;
     /* Make menuBar on top of everything */
     z-index: 1;
@@ -95,7 +98,6 @@ html.is-animating .transition-fade {
 .nav {
     display: flex;
 }
-
 
 .nav ul {
     list-style-type: none;
