--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Gluten:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
-    --clr-primary-200: #E9E0D2;
+    --clr-primary-200: #cddcdc;
     --clr-primary-300: #9CB8C2;
     --clr-primary-400: #617881;
     --clr-primary-900: #2b2b2b;
@@ -202,7 +202,7 @@ h1 {
     position: relative;
     background-color: var(--clr-primary-200);
     padding-top:175px;
-    height: 100vh;
+    height: auto;
 }
 
 #about h1 {
@@ -244,6 +244,7 @@ h1 {
 
 button {
     border: none; 
+    margin: 20px 0 20px 0;
     padding: 10px;
     color: white;
     font: var(--ff-body);
@@ -309,23 +310,19 @@ footer {
     height: 20vh;
     background-color: var(--clr-primary-400);
 }
-footer .footer-container {
+footer .icons {
     display: flex;
-    justify-content: center;
-    width: 90%;
-}
-.social ul {
-    
-    list-style: none;
-}
-.social ul li {
-    display: inline;
-}
-.social ul li a {
-    text-decoration: none;
-    color: var(--clr-primary-900)
+    justify-content: space-between;
+    width: 200px;
 }
 
+footer .icon {
+    width: 40px;
+    height: 40px;
+}
+footer .icon img {
+    width: 100%;
+}
 
 /* =========================================================*/
 /*                        MEDIA QUERIES                     */
@@ -333,6 +330,9 @@ footer .footer-container {
 
 /* Tablet */
 @media screen and (max-width:820px) {
+    nav {
+        background-color: white;
+    }
     nav .container ul li {
         font-size: 1.1rem;
     }
@@ -352,6 +352,10 @@ footer .footer-container {
         margin-top: 2rem;
     }
 
+    
+    #about {
+        height: auto;
+    }
     #about .aboutMeContent {
         flex-direction: column;
     }
@@ -359,6 +363,11 @@ footer .footer-container {
     #about .aboutMeContent .right {
         width: 100%; 
     } 
+    #about form {
+        margin: 20px 0 20px 0;
+    }
+
+
     #contact {
         height: 25vh;
     }
@@ -368,6 +377,13 @@ footer .footer-container {
 }
 /* iPhone */
 @media screen and (max-width:480px) {
+    nav .container {
+        background-color: white;
+        width: 100vw;
+    }
+    nav ul {
+        display: none;
+    }
     #home {
         padding: 0 3vw;
     }
@@ -438,7 +454,9 @@ footer .footer-container {
     }
 
 
-
+    #contact {
+        padding: 0 10vw 0 10vw;
+    }
     #contact h1 {
         font-size: 1.75rem;
     }
