--- a/styles.css
+++ b/styles.css
@@ -233,7 +233,7 @@ h1 {
 }
 #about .aboutMeContent .left,
 #about .aboutMeContent .right {
-    margin: 0 .75rem;
+    margin-right: 1.5rem;
     width: 50%;
 }
 
@@ -275,14 +275,39 @@ button:hover {
 #projects {
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
-    padding-top: 175px;
+    align-items: center;
+    padding-top: 125px;
 }
 
 #projects h1 {
-    padding-bottom: 75px;
+    padding-bottom: 60px;
 }
 
+.projectContainer {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1200px;
+    width: 100%;
+    height: 100%;
+    margin: 50px 0 100px 0;
+
+}
+
+.project1, .project2, .project3 { 
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    width: 30%; 
+    height: 100%;
+    background-color: #e0e0e0;
+    border-radius: 5px;
+}
+
+.project1 p, 
+.project2 p, 
+.project3 p {
+    font-size: 1.5rem;
+}
 
 /* =========================================================*/
 /*                          CONTACT                         */
@@ -372,6 +397,7 @@ footer .icons .icon a:hover {
     
     #about {
         height: auto;
+        padding-top: 100px;
     }
     #about .aboutMeContent {
         flex-direction: column;
@@ -384,7 +410,20 @@ footer .icons .icon a:hover {
         margin: 20px 0 20px 0;
     }
 
-
+    #projects {
+        padding-top: 100px;
+    }
+    #projects .projectContainer {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    #projects .projectContainer .project1,
+    #projects .projectContainer .project2,
+    #projects .projectContainer .project3 {
+        width: 100%;
+        margin: 10px;
+    }
     #contact {
         height: 25vh;
     }
@@ -480,7 +519,20 @@ footer .icons .icon a:hover {
     }
 
     #projects {
-        height: auto;
-        padding: 100px 10vw 100px 10vw;
+        height: 100vh;
+        padding: 50px 10vw 50px 10vw;
+    }
+    #projects .projectContainer {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 25px 0 15px 0;
+    }
+    #projects .projectContainer .project1,
+    #projects .projectContainer .project2,
+    #projects .projectContainer .project3 {
+        width: 100%;
+        height: 100%;
+        margin: 10px;
     }
 }
