--- a/styles.css
+++ b/styles.css
@@ -341,6 +341,7 @@ button:hover {
 #contact .right {
     display: flex;
     justify-content: center;
+    margin-right: 1rem;
 }
 
 #contact .left {
@@ -352,7 +353,7 @@ button:hover {
     height: 50vh;
 }
 #contact .right img {
-    width: 60%;
+    width: 100%;
     object-fit: cover;
     filter: drop-shadow(-10px 10px 0px #ffffff);
     border-radius: 5px;
