--- a/styles.css
+++ b/styles.css
@@ -232,10 +232,11 @@ h1 {
 }
 #about .aboutMeContent .left,
 #about .aboutMeContent .right {
-    margin-right: 1.5rem;
     width: 50%;
 }
-
+.aboutMeContent .left {
+    margin-right: 1.5rem;
+}
 #about p {
     font-size: 1rem;
 }
@@ -292,20 +293,30 @@ button:hover {
 
 }
 
-.project1, .project2, .project3 { 
+.projectCard { 
     display: flex; 
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     width: 30%; 
     height: 100%;
-    background-color: #e0e0e0;
+    background-color: var(--clr-primary-200);
+    filter: drop-shadow(1px 1px 4px var(--clr-primary-300));
     border-radius: 5px;
+    transition: background-color .2s ease-in-out;
+    text-decoration: none;
+    color: var(--clr-primary-400);
 }
 
-.project1 p, 
-.project2 p, 
-.project3 p {
-    font-size: 1.5rem;
+.project1:hover, 
+.project2:hover, 
+.project3:hover {
+    background-color: white;
+}
+
+.projectCard p {
+    font-size: 1.25rem;
 }
 
 /* =========================================================*/
