--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ nav .container ul li:hover {
 nav .container ul li a {
     display: inline-block;
     padding: 10px 20px;
-    color: rgb(0, 0, 0);
+    color: var(--clr-primary-900);
     text-decoration: none;
 }
 nav .container ul li a:hover {
@@ -296,7 +296,6 @@ button:hover {
     max-width: 1200px;
     width: 100%;
     height: 100%;
-    margin: 50px 0 0 0;
 }
 
 .projectCard { 
@@ -304,7 +303,7 @@ button:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: left;
     width: 80%; 
     height: 300px;
 
@@ -314,26 +313,50 @@ button:hover {
     padding: 45px;
     margin: 10px;
     border-radius: 5px;
-    transition: filter .2s ease-in-out;
-    transition: transform .2s ease-in-out;
-    text-decoration: none;
 }
 
-.projectCard:hover {
-    transform: translateY(-5px);
-    filter: drop-shadow(1px 1px 4px #b2b2b2);
-}
 
 .projectCard p {
-    font-size: 1.25rem;
+    font-size: 1rem;
 }
 
 .projectCard a {
+    /* Make button as wide as text inside it */
+    width: fit-content;
     padding: 10px; 
     margin-top: 25px;
-    background-color: var(--clr-primary-300);
+    background-color: var(--clr-primary-400);
     text-decoration: none;
     color: white;
+    border-radius: 5px;
+    transition: background-color .2s ease-in-out,
+                transform .2s ease-in-out;
+}
+
+.projectCard a:hover{
+    background-color: white;
+    transform: translateY(-5px);
+    filter: drop-shadow(1px 2px 4px #c3c3c3);
+    color: var(--clr-primary-900);
+}
+
+/* Individual Project Styling */
+.project2 {
+    flex-direction: row;
+}
+.project2 h2 {
+    margin-bottom: 1rem;
+}
+
+.project2container {
+    display: flex; 
+    flex-direction: column;
+    justify-content: space-between;
+    width: 50%;
+    padding: 20px;
+}
+.project2 img {
+    width: 100%;
 }
 
 /* =========================================================*/
@@ -483,7 +506,6 @@ footer .icons .icon a:hover {
     }
     .projectCard {
         width: 90%;
-        margin: 10px;
     }
     #contact {
         height: 25vh;
